--- a/Resources/Storyboards/MainStoryboard.storyboard
+++ b/Resources/Storyboards/MainStoryboard.storyboard
@@ -218,89 +218,6 @@
             </objects>
             <point key="canvasLocation" x="-4305" y="1434"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="SIF-aJ-lw1">
-            <objects>
-                <viewController storyboardIdentifier="conferenceHome" id="Kjr-Ng-G4V" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uPI-zB-MkS"/>
-                        <viewControllerLayoutGuide type="bottom" id="uV5-lm-psN"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="sfD-p0-0Un">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="DEQ-Sj-b1R">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="O3Y-9X-BZA">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="192"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vo7-4D-7b1">
-                                            <rect key="frame" x="92" y="8" width="136" height="136"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="136" id="5Dt-c0-zwZ"/>
-                                                <constraint firstAttribute="height" constant="136" id="Otk-oa-HSH"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rpn-sG-Udn">
-                                            <rect key="frame" x="20" y="159" width="280" height="17"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                    <constraints>
-                                        <constraint firstItem="Rpn-sG-Udn" firstAttribute="top" secondItem="vo7-4D-7b1" secondAttribute="bottom" constant="15" id="9Vo-WA-cIN"/>
-                                        <constraint firstItem="vo7-4D-7b1" firstAttribute="top" secondItem="O3Y-9X-BZA" secondAttribute="top" constant="8" id="H7t-Br-cHo"/>
-                                        <constraint firstAttribute="trailing" secondItem="Rpn-sG-Udn" secondAttribute="trailing" constant="20" id="QKZ-xM-HZz"/>
-                                        <constraint firstItem="Rpn-sG-Udn" firstAttribute="leading" secondItem="O3Y-9X-BZA" secondAttribute="leading" constant="20" id="TnV-jy-irC"/>
-                                        <constraint firstAttribute="bottom" secondItem="Rpn-sG-Udn" secondAttribute="bottom" constant="16" id="Xo1-DQ-YwO"/>
-                                    </constraints>
-                                </view>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="UGs-jF-iDu">
-                                        <rect key="frame" x="0.0" y="214" width="320" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UGs-jF-iDu" id="e2w-ZR-bML">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Day 1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k6V-Br-Qrr">
-                                                    <rect key="frame" x="20" y="11" width="42" height="19"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Mercredi 10 juillet 2014" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ttM-Lc-dY7">
-                                                    <rect key="frame" x="181" y="16" width="125" height="14"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="ttM-Lc-dY7" secondAttribute="trailing" constant="14" id="HH9-Ai-MT9"/>
-                                                <constraint firstItem="k6V-Br-Qrr" firstAttribute="leading" secondItem="e2w-ZR-bML" secondAttribute="leading" constant="20" id="HwC-yT-ZDA"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Il1-Qh-Oyg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2022" y="3462"/>
-        </scene>
         <!--Table View Controller - Preferences-->
         <scene sceneID="DYL-Zo-6ht">
             <objects>
@@ -1126,6 +1043,53 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rdc-fv-a4X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1669" y="2323"/>
+        </scene>
+        <!--Conference Home View Controller-->
+        <scene sceneID="hun-dX-U2k">
+            <objects>
+                <tableViewController storyboardIdentifier="conferenceHome" id="OQ5-5u-E0V" customClass="XBConferenceHomeViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="cs3-lN-Ii3" customClass="XBTableView">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="ukN-CU-nBW">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="192"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qMB-wb-Xd0">
+                                    <rect key="frame" x="92" y="8" width="136" height="136"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="136" id="108-2f-IYH"/>
+                                        <constraint firstAttribute="width" constant="136" id="IEG-j1-wOW"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90i-25-xwE">
+                                    <rect key="frame" x="20" y="159" width="280" height="17"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="90i-25-xwE" firstAttribute="top" secondItem="qMB-wb-Xd0" secondAttribute="bottom" constant="15" id="2ft-Hx-XR2"/>
+                                <constraint firstItem="qMB-wb-Xd0" firstAttribute="top" secondItem="ukN-CU-nBW" secondAttribute="top" constant="8" id="6Wh-cn-zk4"/>
+                                <constraint firstAttribute="trailing" secondItem="90i-25-xwE" secondAttribute="trailing" constant="20" id="OE9-Yw-Dlc"/>
+                                <constraint firstAttribute="bottom" secondItem="90i-25-xwE" secondAttribute="bottom" constant="16" id="aHh-Tq-0JK"/>
+                                <constraint firstItem="90i-25-xwE" firstAttribute="leading" secondItem="ukN-CU-nBW" secondAttribute="leading" constant="20" id="ggE-5v-8Mf"/>
+                            </constraints>
+                        </view>
+                        <connections>
+                            <outlet property="dataSource" destination="OQ5-5u-E0V" id="qSY-1n-RDn"/>
+                            <outlet property="delegate" destination="OQ5-5u-E0V" id="ONt-bR-UOR"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ETK-u0-0Eg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1976" y="3569"/>
         </scene>
         <!--Event Map View Controller - Map-->
         <scene sceneID="0th-Tv-0TC">
